Gallary dark mode button fix

--- a/Public/style.css
+++ b/Public/style.css
@@ -20,10 +20,14 @@ span {
 }
 
 .darkMode {
-  position: absolute;
-  right: 66px;
   background-color: black;
   color: white;
+}
+
+.darkMode button {
+  position: absolute;
+  right: 13%;
+  
 }
 
 .sidenav {
@@ -66,9 +70,6 @@ span {
     padding: 16px;
   }
   
-
-
-
   * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
 
